<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="28dp"
    android:orientation="vertical">

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/picture_description" />

    <ImageView android:id="@+id/picture_share"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/picture_thumbnail_description" />

    <Button android:id="@+id/picture_camera_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/picture_camera_button_text"
        android:background="#3F51B5"
        android:textColor="#FFF" />

    <EditText
        android:id="@+id/get_picture_entry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/get_picture_hint" />

    <Button android:id="@+id/get_pictureDB_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/picture_database_button_text"
        android:textColor="#FFF"
        android:background="#3F51B5" />

    <TextView
        android:id="@+id/exifview"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"/>

    <TextView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/histogram_description" />

    <ImageView
        android:id="@+id/histogram_image_view"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/picture_thumbnail_description"/>

    <Button android:id="@+id/picture_share_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title_share_picture"
        android:background="#3F51B5"
        android:textColor="#FFF"
        android:layout_marginTop="10dp" />

</LinearLayout>