<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <EditText
        android:id="@+id/get_picture_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/get_picture_url" />

    <Button android:id="@+id/main_get_picture_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/get_picture_button_text"
        android:background="#3f51b5"
        android:textColor="#FFFFFF" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/imageView"
        android:layout_gravity="bottom|center_horizontal" />

    <EditText
        android:id="@+id/save_picture_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/save_picture_hint" />

    <Button android:id="@+id/main_save_picture_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_picture_button_text"
        android:background="#3F51B5"
        android:textColor="#FFF" />

    <Button android:id="@+id/db_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/db_manage_text"
        android:background="#3f51B5"
        android:textColor="#FFF"
        android:singleLine="true" />

    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/main_activity_description" />


    <Button android:id="@+id/main_share_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/title_share_text"
        android:background="#3F51B5"
        android:textColor="#FFF" />


    <Button android:id="@+id/main_share_picture_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/title_share_picture"
        android:background="#3F51B5"
        android:textColor="#FFF" />

</LinearLayout>
